--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
+coverage==6.3.1
 Deprecated==1.2.13
 Django==4.0.2
 djangorestframework==3.13.1
@@ -19,6 +20,7 @@ idna==3.3
 importlib-metadata==4.10.1
 iniconfig==1.1.1
 kombu==5.2.3
+model-bakery==1.4.0
 packaging==21.3
 pep8==1.7.1
 pluggy==1.0.0
@@ -28,6 +30,7 @@ py==1.11.0
 PyJWT==2.3.0
 pyparsing==3.0.7
 pytest==7.0.0
+pytest-cov==3.0.0
 pytest-django==4.5.2
 python-decouple==3.6
 pytz==2021.3
