--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = src.settings
 python_files = tests.py test_*.py *_tests.py
+addopts = -vv -x --lf --cov
 
 filterwarnings = 
     ignore: SelectableGroups dict interface
