--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,8 @@ jobs:
         python-version: [3.10.1]
         
     services:
+          redis:
+            image: redis:bullseye
           postgres:
             image: postgres:14
             env:
