add tests, minor edits

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,12 @@
 DJANGO_SETTINGS_MODULE = src.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -vv -x --lf --cov
+markers=
+    unit
 
 filterwarnings = 
     ignore: SelectableGroups dict interface
+
+[coverage:run]
+source=posts, users
+omit=*/migrations/*
