--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,37 +7,11 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.10.1]
-        
-    services:
-          redis:
-            image: redis:bullseye
-          postgres:
-            image: postgres:14
-            env:
-              POSTGRES_USER: "${{ secrets.DB_USER }}"
-              POSTGRES_PASSWORD: "${{ secrets.DB_PASSWORD }}"
-              POSTGRES_DB: "${{ secrets.DB_NAME }}"
-            ports:
-              - 5432:5432
-            options: >-
-              --health-cmd pg_isready
-              --health-interval 10s
-              --health-timeout 5s
-              --health-retries 5
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Create env file
+    - name: Creating env file
       run: |
         touch .env
         echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
@@ -51,13 +25,9 @@ jobs:
         echo ABS_API_KEY_GEO="${{ secrets.ABS_API_KEY_GEO }}" >> .env
         echo ABS_API_KEY_HOLIDAY="${{ secrets.ABS_API_KEY_HOLIDAY }}" >> .env
         cat .env
-    - name: Install Dependencies
+    - name: Building containers
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run migrations
+        docker-compose up -d --build
+    - name: Running Tests
       run: |
-        python manage.py makemigrations
-        python manage.py migrate
-    - name: Run tests
-      run: pytest
+        docker-compose exec -T backend pytest
