--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,12 @@ pyparsing==3.0.7
 pytest==7.0.0
 pytest-cov==3.0.0
 pytest-django==4.5.2
+pytest-mock==3.7.0
 python-decouple==3.6
 pytz==2021.3
 redis==4.1.2
 requests==2.27.1
+requests-mock==1.9.3
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
