add fixtures, follow dry

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,4 @@ filterwarnings =
 
 [coverage:run]
 source=posts, users
-omit=*/migrations/*
+omit=*/migrations/*, users/managers.py, users/tasks.py
